tests/paczka1/small_fuzzy/54768770.err
Error in line 4: FcbxD0oF A517 78,2
Error in line 5: FcbxD0oF A212 49,8
Error in line 7: A671 A671 47,0
